feat: add pretty log viewer
Adds pretty log viewer, with lazy-loaded page contents.
